# Pokedex

./: .gitignore  Makefile  README.md  pyproject.toml
.github/: copilot-instructions.md
src/pokedex/: cli.py
src/pokedex.egg-info/: PKG-INFO  SOURCES.txt
src/pokedex/client/: errors.py  models.py  pokeapi.py
tests/: test_errors.py  test_pokeapi.py
