[project]
name = "pokedex"
version = "0.1.0"
description = "Simple Pokedex built with Python and PokeAPI"
requires-python = ">=3.10"
dependencies = [
    "httpx>=0.25.0",
    "typer>=0.9.0",
]

# Esto permite ejecutar: pokedex pokemon pikachu
[project.scripts]
pokedex = "pokedex.cli:app"


[tool.pytest.ini_options]
testpaths = ["tests"]


[tool.ruff]
line-length = 95
target-version = "py310"


[tool.ruff.lint]
select = ["E", "F", "B", "I"]
